# ChangeLog for app-office/openoffice
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.203 2006/04/02 16:02:16 suka Exp $

  02 Apr 2006; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-2.0.1.ebuild, openoffice-2.0.1-r1.ebuild,
  openoffice-2.0.2.ebuild:
  Change xml2 use-flag to xml for bug #116346, also clean out old version

  01 Apr 2006; Andreas Proschofsky <suka@gentoo.org>
  -files/2.0.2/pythonfix.diff, +files/2.0.2/gentoo-2.0.2.diff,
  openoffice-2.0.2.ebuild:
  Update to new patch revision, fix some file permission and remove patch
  which breaks gcc-4.1

  01 Apr 2006; Simon Stelling <blubb@gentoo.org> openoffice-2.0.1.ebuild,
  openoffice-2.0.1-r1.ebuild, openoffice-2.0.2.ebuild:
  marking -amd64

  25 Mar 2006; Andreas Proschofsky <suka@gentoo.org>
  +files/2.0.2/pythonfix.diff, -files/2.0.2/removecrystalcheck.diff,
  -files/2.0.2/use-system-xt.diff, openoffice-2.0.2.ebuild:
  Update to newer patchset, which contains some fixes. Also fix Python
  scripting and add the mono-bridge

*openoffice-2.0.1-r1 (17 Mar 2006)

  17 Mar 2006; Andreas Proschofsky <suka@gentoo.org>
  +openoffice-2.0.1-r1.ebuild:
  Revision bump the stable version for security problem with curl, see bug
  #126433

  16 Mar 2006; Andreas Proschofsky <suka@gentoo.org>
  openoffice-2.0.1.ebuild, openoffice-2.0.2.ebuild:
  Remove curl use flag, we really always want to use the external curl

  15 Mar 2006; Andreas Proschofsky <suka@gentoo.org>
  +files/2.0.2/use-system-xt.diff, openoffice-2.0.2.ebuild:
  Fix for building with java 1.5, close bug #125824

  14 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  openoffice-2.0.2.ebuild:
  Removing ~sparc until QA is sorted out

*openoffice-2.0.2 (10 Mar 2006)

  10 Mar 2006; Andreas Proschofsky <suka@gentoo.org>
  -files/2.0.2/gentoo-2.0.2.diff, -files/2.0.2/buildfix-no-java.diff,