@@ -1,6 +1,6 @@
-MD5 665a021343d11d5832d227abc940507e ChangeLog 43739
-RMD160 34612bdb157803c185979384e8a78139f59555b3 ChangeLog 43739
-SHA256 f61ea9299ea37bd1c7a9e2760e322e165774bab4af98f0abaa198ad3f92aee05 ChangeLog 43739
+MD5 9bda38ed7544de61d25c600400cc42bf ChangeLog 43890
+RMD160 30ef53aff16be79f7ba14da63f136e59b4a57176 ChangeLog 43890
+SHA256 c35efb8ef94dccca8664a016bb378c69a8ce77a940dfc553ac5dc09e3cdaf77f ChangeLog 43890
 MD5 500f7e71be57d40b0a8042cab1484df9 files/2.0.1/alwayscrystal.diff 3222
 RMD160 6f563dccad523db881def1fdb711df3949c2a687 files/2.0.1/alwayscrystal.diff 3222
 SHA256 22af14b2c3bd7d796eeda2f4a423f4290e71d2f2790a82038b837c6219133ef1 files/2.0.1/alwayscrystal.diff 3222
@@ -16,9 +16,9 @@ SHA256 133d9271e6775bc7c0e29946edef421d00c49385db65df8f9b4d7d772425e088 files/di
 MD5 e3ec4a70395943b59adad7fc4f0538d7 metadata.xml 461
 RMD160 3e99c165e962e73417462c6df7a476a558b3ae18 metadata.xml 461
 SHA256 7a25927f2c830703539753c0f7295551795419ef0d05b72db505a2ac1094d291 metadata.xml 461
-MD5 c73fad8c51c44b06321665fd0dfb89c4 openoffice-2.0.1-r1.ebuild 7337
-RMD160 4aaafe79b1b728b8eba1ea8381d0b9c5a181a06f openoffice-2.0.1-r1.ebuild 7337
-SHA256 f38b01bfb5954b89bc38e02e7645bcce742a96a7de74fc35fb88b9a7c8d871d1 openoffice-2.0.1-r1.ebuild 7337
-MD5 1ebf65036212f3cbde4c0fcf67680108 openoffice-2.0.2.ebuild 7785
-RMD160 34585547a47a6372b39f9cf841daeb5e19588643 openoffice-2.0.2.ebuild 7785
-SHA256 a93d78ed2f8032415382e207bd6e5012818fc505b4f3ce55555d730ba15c8e4a openoffice-2.0.2.ebuild 7785
+MD5 4036291770fc77e15ca28b0136d44805 openoffice-2.0.1-r1.ebuild 7334
+RMD160 5965630887a411c39608b82352c69b4ab9277194 openoffice-2.0.1-r1.ebuild 7334
+SHA256 7c132d2d10f51786bbd5342aa7bf9777975f6ff378528b7254f04e894cdc37dc openoffice-2.0.1-r1.ebuild 7334
+MD5 c9fd6b53d81a113b7d35b54165909fe8 openoffice-2.0.2.ebuild 7782
+RMD160 2ab6e690538893ae09a14d7e988c150c8125144f openoffice-2.0.2.ebuild 7782
+SHA256 bf5b3b2781bc910ce8dd9fe3e3346c37a2e4a8b2151ddf1ca0f453cb1833daac openoffice-2.0.2.ebuild 7782
