@@ -1,6 +1,10 @@
 # ChangeLog for app-office/openoffice
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.203 2006/04/02 16:02:16 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.204 2006/04/04 19:45:31 suka Exp $
+
+  04 Apr 2006; Andreas Proschofsky <suka@gentoo.org>
+  openoffice-2.0.1-r1.ebuild, openoffice-2.0.2.ebuild:
+  fix xml-mess-up by stupid maintainer...
 
   02 Apr 2006; Andreas Proschofsky <suka@gentoo.org>
   -openoffice-2.0.1.ebuild, openoffice-2.0.1-r1.ebuild,
